version/0.10/_sources/API/_autosummary/ansys.aedt.core.modules.solve_setup.Setup3DLayout.rst.txt
Setup3DLayout
=============

.. currentmodule:: ansys.aedt.core.modules.solve_setup

.. autoclass:: Setup3DLayout

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Setup3DLayout.add_sweep
      
      
      Setup3DLayout.analyze
      
      
      Setup3DLayout.create
      
      
      Setup3DLayout.create_report
      
      
      Setup3DLayout.disable
      
      
      Setup3DLayout.enable
      
      
      Setup3DLayout.export_to_hfss
      
      
      Setup3DLayout.export_to_json
      
      
      Setup3DLayout.export_to_q3d
      
      
      Setup3DLayout.get_profile
      
      
      Setup3DLayout.get_solution_data
      
      
      Setup3DLayout.get_sweep
      
      
      Setup3DLayout.import_from_json
      
      
      Setup3DLayout.update
      
      
      Setup3DLayout.use_matrix_convergence
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Setup3DLayout.available_properties
      Setup3DLayout.default_intrinsics
      Setup3DLayout.is_solved
      Setup3DLayout.name
      Setup3DLayout.omodule
      Setup3DLayout.p_app
      Setup3DLayout.solver_type
   
   